about me + header

--- a/index.html
+++ b/index.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="sidenav">
-      <h1>Anjali Chaturvedi</h1>
-      <div class="navlink">
-    <a href="#">👩 About Me</a>
-    <a href="#">🖥️ Projects </a>
-    <a href="#">💡 Nonprofit</a>
-    <a href="#">📇 Contact</a>
+
+<head>
+  <meta charset="utf-8">
+  <title>Anjali Chaturvedi</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="shortcut icon" href="images/avatar.PNG">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="sidenav">
+    <h1>Anjali Chaturvedi</h1>
+    <div class="navlink">
+      <a href="#">👩 About Me</a>
+      <a href="#">🖥️ Projects </a>
+      <a href="#">💡 Nonprofit</a>
+      <a href="#">📇 Contact</a>
     </div>
     <div class="navlink-2">
       <p><a href="#">Resume |</a> <a href="#">Github</a></p>
     </div>
   </div>
 
-  <div class="main">
-    <h2>Sidenav Example</h2>
-    <p>This sidenav is always shown.</p>
+  <div class="content">
+    <div class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <img src="images/avatar.png" alt="Avatar">
+          </div>
+          <div class="col">
+            <h1>Hey there! I am Anjali <br>Chaturvedi 👋</h1>
+            <h5>Frontend developer | Social impact | Budding enterpreneur</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>👩 About Me</h1>
+          </div>
+          <div class="col">
+            <p>I am Anjali Chaturvedi, a senior at DPS Vasant Kunj and I am interested in business and tech, especially creating social impact by intergrating them. As the Founder + Lead Director of PitchTeen, I help women from different backgrounds
+              to get the exposure they deserve through tech startup competitions, mentorship programs, panel and workshops.
+              Other than all things technical, I love to shop and eat local food, meet new people and write!</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  </body>
+  <img src="images/wave.svg" alt="SVG">
+    <div class="projects" id="projects">
+      <h1>🖥️ Projects</h1>
+        <h2>hdhd</h2>
+    </div>
+</body>
+
 </html>
